# hed-curation

./: .gitattributes  MANIFEST.in  README.md  requirements.txt  setup.cfg
curation/: __init__.py  _version.py
curation/cleaning/jupyter_utility_notebooks/: remove_files.ipynb  remove_stim_files.ipynb
curation/remapping/: __init__.py  restore.py  run.py  run_enhance1.py  run_enhance2.py  run_restore_events.py
curation/remapping/examples/: soc21gng_operations_context.json  stopsignal_remapping.json
curation/remapping/models/: model-factor-successvsunsuccess1_smdl.json  model-remap-leftvsright_smdl.json  model-stopsignal_smdl.json  remap_just_responses.json  remap_stopsignal.json
curation/remapping/operations/: base.py  bidsfiles.py  ops.py  structure.py
curation/remodeling/: __init__.py  run_backup_events.py  run_remodeler.py  run_restore.py  run_restore_events.py
curation/remodeling/examples/: enhance_emomatching.json  enhance_workingmemory.json
docs/source/: conf.py  index.rst
old_stuff/: get_beh_data.py  run.py  run_count_trial_types.py  run_enhance.py  run_enhance1.py  run_enhance2.py  run_get_response_time.py  run_restore_events.py
src/: _version.py
src/models/: model-leftvsrighthands_smdl.json  model-leftvsrightmalevsfemale_smdl.json  model-remap-leftvsright_smdl.json  save fitlins commands
src/remapping/: enhance_emomatching.json  enhance_event.py  enhance_stopsignal.json  enhance_workingmemory.json  remap_just_responses.json  restore.py  run.py  run_adapt.md  run_enhance.py  run_enhance2.py  run_restore_events.py
(+86 files in other folders)
