[metadata]
name = hed-curation
author = Monique Denissen, VisLab, Kay Robbins
author_email = Kay.Robbins@utsa.edu
description = "Curation of datasets using BIDs and HED.",
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hed-standard/hed-curation/
# project_urls =
bug tracker = https://github.com/hed-standard/hed-curation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent



[options]
package_dir =
    = .
packages = find_namespace:
python_requires = >=3.9
install_requires =
    click
    coverage
    defusedxml
    et-xmlfile
    Flask
    Flask-WTF
    hedtools
    inflect
    itsdangerous
    jdcal
    Jinja2
    MarkupSafe
    numpy
    openpyxl
    pandas
    portalocker
    python-dateutil
    pytz
    semantic-version
    six
    Sphinx
    SphinxExtensions
    sphinx_rtd_theme
    Werkzeug
    xlrd
    attrs


[options.packages.find]
include = curation*

[versioneer]
VCS = git
style = pep440
versionfile_source = curation/_version.py
versionfile_build = curation/_version.py
tag_prefix =
parentdir_prefix = hed-curation-